--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
         <title>おみくじ</title>
     </head>
     <body>
-        <h1>おみくじ</h1>
+        <h1>おみくじ えへへ</h1>
         
 <% if params['act'] != nil %>
 
